--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@types/mapbox-gl": "^2.6.1",
     "@vitejs/plugin-vue": "^2.2.0",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
